--- a/DrawWeb/index.html
+++ b/DrawWeb/index.html
@@ -18,6 +18,9 @@
             <input type="text" name="Pen Size" id="penSize" value="" />
             Color:
             <input type="color" name="colorPicker" id="colorSel" value="#ff0000">
+            Clear button:
+            <input type="button" name="clear" id="clear" value="Clear">
+
             </form>
         </div>
         <canvas id="draw"></canvas>
